runFormatTest(import.meta, [
  "typescript",
  "babel-ts",
  // "oxc-ts"
]);
