// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`declare-getter.ts [typescript] format 1`] = `
"'declare' modifier cannot appear on class elements of this kind. (2:3)
  1 | class Foo {
> 2 |   declare get foo()
    |   ^^^^^^^
  3 | }
  4 |
Cause: 'declare' modifier cannot appear on class elements of this kind."
`;

exports[`declare-setter.ts [typescript] format 1`] = `
"'declare' modifier cannot appear on class elements of this kind. (2:3)
  1 | class Foo {
> 2 |   declare set foo(v)
    |   ^^^^^^^
  3 | }
  4 |
Cause: 'declare' modifier cannot appear on class elements of this kind."
`;

exports[`default-escaped.ts [typescript] format 1`] = `
"Declaration or statement expected. (1:1)
> 1 | export asyn\\u{63} from "async";
    | ^
  2 |
Cause: Declaration or statement expected."
`;

exports[`export-declare.ts [typescript] format 1`] = `
"Declaration or statement expected. (1:1)
> 1 | export declare foo;
    | ^
  2 |
Cause: Declaration or statement expected."
`;

exports[`invalid-jsx-1.tsx [typescript] format 1`] = `
"Unexpected token. Did you mean \`{'>'}\` or \`&gt;\`? (3:45)
  1 | // https://www.typescriptlang.org/docs/handbook/release-notes/typescript-3-9.html#-and--are-now-invalid-jsx-text-characters
  2 |
> 3 | let directions = <div>Navigate to: Menu Bar > Tools > Options</div>
    |                                             ^
  4 |
Cause: Unexpected token. Did you mean \`{'>'}\` or \`&gt;\`?"
`;

exports[`module-attributes-static.ts [typescript] format 1`] = `
"'{' expected. (1:33)
> 1 | import foo from "foo.json" with type: "json";
    |                                 ^
  2 |
Cause: '{' expected."
`;

exports[`newline-before-arrow.ts [typescript] format 1`] = `
"Unexpected keyword or identifier. (1:1)
> 1 | async x
    | ^
  2 | => x
  3 |
Cause: Unexpected keyword or identifier."
`;

exports[`value-of-abstract-property.ts [typescript] format 1`] = `
"Abstract property cannot have an initializer. (2:19)
  1 | abstract class Foo {
> 2 |   abstract prop = 3;
    |                   ^
  3 | }
  4 |
Cause: Abstract property cannot have an initializer."
`;
